# configos

./: ..code-workspace  .baw  BUGS.md  CHANGELOG  CHANGELOG.md  Dockerfile  Jenkinsfile  Makefile  README  README.md  pyproject.toml  requirements.dev  requirements.txt  setup.py
.baw/: project.config
.github/: dependabot.yml
.github/workflows/: docker.yml  pypi.yml  release.yml  test.yaml  test.yml
configo/: __init__.py  cache.py  cli.py  debugs.py  directory.py  docs.py  document.py  env.py  exception.py  holyvalue.py  server.py  share.py  utils.py
configo/cli/: __init__.py  generate.py  optimization.py  plan.py  result.py
configo/holyvalue/: __init__.py  access.py  cloud.py  collect.py  data.py  store.py  table.py
configos/: __init__.py  cache.py  debugs.py  directory.py  docs.py  env.py  exception.py  utils.py
configos/cli/: __init__.py  generate.py  optimization.py  plan.py  result.py
configos/holyvalue/: access.py  cloud.py  collect.py  data.py  store.py  table.py
docs/: bugs.rst  index.rst
docs/pages/: readme.rst
docs/releases/: 0.3.0.md  0.3.0.rst  0.4.0.md  0.4.0.rst  0.5.0.rst  backlog.md  backlog.rst  releases.rst
tests/: __init__.py  conftest.py  test_access.py  test_cli.py  test_cloud.py  test_debug.py  test_document.py  test_env.py  test_holyexample.py  test_holyvalue.py  test_optimization.py  test_plan.py  test_server.py  test_share.py
tests/examples/: first_one.hv  result
tests/holy/: test_example.py
tests/hvexample/: __init__.py
tests/hvexample/level/: __init__.py  file.py
