[build-system]
requires = [
    "setuptools>=82.0.1",
    "wheel>=0.46.3"
]
build-backend = "setuptools.build_meta"

[project]
name = "configos"
version = "1.0.1"
description = ""
readme = "README"
requires-python = ">=3.10"
authors = [
  {name = "Helmut Konrad Schewe", email = "helmutus@outlook.com"}
]

dependencies = [
    "utilo>=2.107.0,<3.0.0",
]

# Optional but recommended metadata
keywords = []
classifiers = [
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
]

[project.scripts]
configos = "configos.cli:main"

[project.optional-dependencies]
dev = [
    "utilotest>=0.24.3,<1.0.0",
    "rawmaker>=2.40.1,<3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["configos*"]
exclude = ["tests*"]
