[build-system]
requires = [
    "setuptools>=82.0.1",
    "wheel>=0.46.3"
]
build-backend = "setuptools.build_meta"

[project]
name = "configos"
version = "1.0.4"
description = ""
readme = {file = "README", content-type = "text/markdown"}
requires-python = ">=3.12"
authors = [
  {name = "Helmut Konrad Schewe", email = "helmutus@outlook.com"}
]

dependencies = [
    "utilo>=2.107.3,<3.0.0",
]

# Optional but recommended metadata
keywords = []
classifiers = [
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
]
license = "MIT"
license-files = ["LICENSE"]

[project.scripts]
configos = "configos.cli:main"

[project.optional-dependencies]
dev = [
    "utilotest>=0.24.3,<1.0.0",
    "rawmaker>=2.40.1,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/anaticulae/configos"
Repository = "https://github.com/anaticulae/configos"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG"
[tool.semantic_release.changelog]
mode = "init"
output_format = "md"
[tool.semantic_release.commit_parser_options]
# allways generate a new version
patch_tags = ["fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test", "deps"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "configos",
    "configos.cli",
    "configos.holyvalue",
]
exclude = [
    "tests*",
]
